--- a/src/style_sheets/contact_page_content_style.css
+++ b/src/style_sheets/contact_page_content_style.css
@@ -1,14 +1,83 @@
-article {
-    border-style: solid;
-    float: left;
-    width: 50%;
-    margin-left:  25%;
+@media screen and (max-width: 1300px) {
+    .buttonContainer a {
+        display: block;        
+    }
+    .contactForm {
+        text-align: center;
+    }
+    .contactForm input {
+        display: block;
+    }
+}
+
+.section {
+/*    border-style: solid;*/
+    width: 60%;
+    margin: auto;
+}
+
+.page_breaker_image {
+/*    border-style: solid;*/
+    width: 60%;
+    margin: 10% auto 0;
+    padding: 10px;
     text-align: center;
 }
 
-
-section:after {
-    content: "";
-    display: table;
-    clear: both;
+/* Forms */
+.contactForm {
+/*    border-style: solid;*/
+    padding-top: 10px;
+    text-align: center;
 }
+
+.contactForm h1 {
+/*    border-style: solid;*/
+    background-color: white;
+    font-family: "Playfair Display";
+    text-decoration: none;
+    letter-spacing: 5px;
+    font-size: 25px;
+    color: black;
+    margin: 5px 0;
+    padding: 10px;    
+}
+
+.contactForm input {
+    padding: 5px;
+    margin: 2.5px;
+    border-radius: 7px;
+}
+.contactForm button {
+    font-family: "Playfair Display";
+    letter-spacing: 3px;
+    font-size: 17px;
+    border: none;
+    background-color: #e7e7e7;
+    color: #424242;
+    border-radius: 7px;
+    margin: 10px 0;
+    padding: 5px 10px;   
+}
+.contactForm button:hover {
+    background-color: #c6c6c6;
+    color: black;
+    
+}
+.contactForm hr {
+    margin: 50px 0;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
