--- a/src/style_sheets/html_format_style.css
+++ b/src/style_sheets/html_format_style.css
@@ -5,5 +5,70 @@ article aside, figure, figcaption, footer, hgroup, header, section, nav {
 body {
     min-width: 870px;
     margin: 0;
+    padding: 0;
     font-family: Arial, Helvetica, sans-serif;    
+}
+
+/* Nav bar styling */
+.navBox {
+    overflow: hidden;
+    background-color: white;
+    font-family: "Playfair Display";
+    letter-spacing: 5px;
+    box-shadow: 0 3px 4px -2px gray;
+    padding: 0px 20px;
+}
+
+.navBox .navImg a {
+    float: left;
+    color: black;
+    text-align: center;
+    padding: 9px 16px;
+    margin: 8px 0px;    
+    text-decoration: none;
+    font-size: 17px;
+}
+
+.navBox .navPageLinks a {
+    float: right;
+    color: black;    
+    text-align: center;
+    padding: 9px 16px;
+    margin: 8px 0px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+.navBox .navPageLinks a.active {
+  background-color: #ddd;
+  color: black;
+}
+
+.navBox .navPageLinks a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+
+/* Footer styling */
+.footer {
+    border-style: solid;
+    position: absolute;
+    background-color: white;
+    bottom: 0;
+    width: 100%;
+    height: 200px;
+    
+}
+.footer a {
+    color: black;
+    text-decoration: none;
+    font-family: "Playfair Display";
+    letter-spacing: 5px;
+    font-size: 17px;
+    padding: 9px 16px;
+}
+.footer a:hover {
+    background-color: #ddd;
+    color: black;
 }
