--- a/src/style_sheets/html_format_style.css
+++ b/src/style_sheets/html_format_style.css
@@ -2,7 +2,8 @@ body {
     min-width: 766px;
     margin: 0;
     padding: 0;
-    font-family: Arial, Helvetica, sans-serif;    
+    font-family: sans-serif;
+    background-color: #f1f1f1;  
 }
 
 /* Nav bar styling */
