--- a/src/style_sheets/about_style.css
+++ b/src/style_sheets/about_style.css
@@ -5,6 +5,7 @@
     opacity: 0.25;
 }
 .centered {
+        width: 700px;
     text-align: center;
     position: absolute;
     top: 50%;
@@ -21,7 +22,7 @@
     font-family: "Playfair Display";
     font-size: 20px;
     font-style: italic;
-    letter-spacing: 4px;
+  letter-spacing: 4px;
 }
 
 
