--- a/src/style_sheets/about_style.css
+++ b/src/style_sheets/about_style.css
@@ -5,7 +5,7 @@
     opacity: 0.25;
 }
 .centered {
-        width: 700px;
+    width: 700px;
     text-align: center;
     position: absolute;
     top: 50%;
@@ -23,6 +23,11 @@
     font-size: 20px;
     font-style: italic;
   letter-spacing: 4px;
+}
+@media only screen and (max-width: 1400px) {
+    .centered {
+        top: 30%;        
+    }    
 }
 
 
