Titles added to nav links, favicon image added to <title>

--- a/src/style_sheets/html_format_style.css
+++ b/src/style_sheets/html_format_style.css
@@ -17,12 +17,11 @@ body {
 }
 .navBox .navImg a {
     float: left;
-    color: black;
-    text-align: center;
-    padding: 9px 16px;
-    margin: 8px 0px;    
+    color: black;    
     text-decoration: none;
-    font-size: 17px;
+}
+.navBox .navImg img {
+    width: 200px;
 }
 .navBox .navPageLinks a {
     float: right;
