--- a/src/style_sheets/about_style.css
+++ b/src/style_sheets/about_style.css
@@ -60,3 +60,17 @@
     text-align: center;
     transform: rotate(180deg) scale(0.70);
 }
+
+.videoContainer {
+    width: 100%;
+    height: 100%;
+    width: 820px;    
+    height: 461.25px; 
+    float: none; 
+    clear: both; 
+    margin: 2px auto;
+}
+.videoContainer iframe {
+    width: 100%;
+    height: 100%;
+}
